	using _Free.

	* src/cerebrod/cerebrod_clusterlist_hostsfile.c (_all): Removed function.

	* src/cerebrod/cerebrod_listener.c
	(_cerebrod_listener_initialize, _rehash): Rework using _Free.

	* src/cerebrod/cerbrod_updown.c
	(_cerebrod_listener_dump_cluster_node_data_hash): Remove
	Hash_count use, use cluster_data_hash_numnodes instead.

2005-03-14  Albert Chu  <chu11@llnl.gov>

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c (Lt_dlinit,
	Lt_dlexit, wrap_lt_dlinit, wrap_lt_dlexit): New wrappers.

	* src/cerebrod/cerebrod_clusterlist.c (cerebrod_clusterlist_setup,
	cerebrod_clusterlist_cleanup): Use new wrappers.h

	* src/cerebrod/cerebrod_clusterlist_hostsfile.c: Completed work.

	* config/ac_hostsfile.m4: New file.

	* configure.ac: Updated to configure hostsfile default path.

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c
	(List_delete_all, List_for_each, wrap_list_delete_all,
	wrap_list_for_each): New functions.

	* src/cerebrod/cerebrod_clusterlist_none.c: New file.

	* src/cerebrod/Makefile.am: Update with none module.

	* src/cerebrod/cerebrod_listener.c (cerebrod_listener): Add
	clusterlist support.

	* src/cerebrod/cerebrod_clusterlist_none.c: New file.

	* Makefile.am: Updated with new module.
	
2005-03-13  Albert Chu  <chu11@llnl.gov>

	Add initial support for masterlist mechanisms.
	
	* config/libtool.m4, config/ac_genders.m4,
	config/ac_gendersllnl.m4, src/libcommon/argv.h,
	src/libcommon/argv.c, src/libcommon/ltdl.h,
	src/libcommon/ltdl.c,src/cerebrod/cerebrod_clusterlist.h,
	src/cerebrod/cerebrod_clusterlist.c,
	src/cerebrod/cerebrod_clusterlist_genders.c,
	src/cerebrod/cerebrod_clusterlist_gendersllnl.c,
	src/cerebrod/cerebrod_clusterlist_hostsfile.c: New files.

	* src/libcommon/Makefile.am, src/cerebrod/Makefile.am: Updated
	appropriately.

	* src/cerebrod/cerebrod.c (_cerebrod_initialization): Renamed to
	_cerebrod_pre_config_initialization.

	* src/cerebrod/cerebrod.c (_cerebrod_post_config_initialization):
	New function.
